syntax = "proto3";
option java_package = "com.topgame.message.common";
option csharp_namespace ="Proto3"; 

message ClientServerInfo
{
	string name = 1;
	int32 id = 2;
	int32 zoom = 3;
	string ip = 4;
	int32 port = 5;
}

message FrameInput {	
	int32 type = 1; 
	int32 value = 2;
}

message KeyValue {	
	int32 key = 1; 
	int32 value = 2;
}

message KeyValue64 {	
	int32 key = 1; 
	int64 value = 2;
}

message HeroBattleData {
    int64 id = 1;
	int32 heroID = 2; // 配置ID
	int32 level = 3; 
}

message ItemData {
	int32 guid = 1;
	int32 configId = 2;
	int64 value = 3;
	int32 time = 4;	//
	int32 pos = 5;	// 孵蛋的位置
	int32 flags = 6;
}

message SystemUnlockData {
	int32 guid = 1;
	int32 configId = 2;
	bool isUnlock = 3;
	bool isLevelUnlock = 4;
	int32 level = 5;
}

enum EFlagDirtyType {
	SignIn = 0;//签到
	GoDay = 1;//创号天数
	DiamondBuyActionPointCount = 2;//钻石购买体力次数
	ADBuyActionPointCount = 3;//广告购买体力次数
}

message FlagDirtyResponse {
	int64 userID = 1;
	repeated KeyValue64 flags =2;
}